objects/pse__Time_Variance_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Defines the properties of the Time Variance calculation report when clicking the Generate Time Variance button from a region, practice, or group.</description>
    <fields>
        <fullName>pse__Allowed_Variance_Over__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Specifies the time variance over scheduled working hours to include in time variance calculations.</inlineHelpText>
        <label>Allowed Variance Over</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Allowed_Variance_Under__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Specifies the time variance under scheduled working hours to include in time variance calculations.</inlineHelpText>
        <label>Allowed Variance Under</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Exclude_Billable_Hours__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If selected, billable hours are ignored when calculating Time Variance.</inlineHelpText>
        <label>Exclude Billable Hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Exclude_Credited_Hours__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If selected, credited hours are ignored when calculating Time Variance.</inlineHelpText>
        <label>Exclude Credited Hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Exclude_Excluded_Hours__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If selected, excluded hours are ignored when calculating Time Variance.</inlineHelpText>
        <label>Exclude Excluded Hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Report_All__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Specifies that time variance calculations include details on all resources, including resources who do not show outside the allowed variance ranges.</inlineHelpText>
        <label>Report All</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Use_Percentage__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If true, the values in the Allowed Variance Over and Allowed Variance Under settings are percentages of time variance. If false, the values in the Allowed Variance Over and Allowed Variance Under settings are hours.  This setting is true by default.</inlineHelpText>
        <label>Use Percentage</label>
        <type>Checkbox</type>
    </fields>
    <label>Time Variance Settings</label>
</CustomObject>